--- a/luxe_backend/requirements.txt
+++ b/luxe_backend/requirements.txt
@@ -3,3 +3,8 @@ djangorestframework>=3.14
 djangorestframework-simplejwt>=5.3
 django-cors-headers>=4.3
 Pillow>=10.0
+gunicorn
+whitenoise
+dj-database-url
+psycopg2-binary
+django-cors-headers
